# vtdf

./: CLAUDE.md  Makefile  README.md  pyproject.toml
script/: zcs
src/vtdf/: __init__.py
tests/: test_dag.py
