[project]
name = "vtdf"
version = "0.1.0"
description = "very-tiny-dag-framework"
readme = "README.md"
authors = [
    { name = "Joachim Bargsten", email = "jw@bargsten.org" }
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
norecursedirs = [
    "tests/testkit"
]

[tool.ruff]
line-length=111

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.basedpyright]
reportUnusedCallResult = false
reportUnusedExpression = false

